[tool.poetry]
name = "invite-bot"
version = "0.1.0"
description = "Telegram bot to provide invite codes for FlareBoard"
authors = ["Daniil <dadyarri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tortoise-orm = "^0.17.8"
asyncpg = "^0.24.0"
aerich = "^0.5.8"
aiogram = "^2.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
